<resources>
    <string name="app_name" translatable="false">WeatherApp</string>
    <string name="Уфа">Уфа</string>
    <string name="desc" translatable="false">image</string>
    <string name="weatherByhour">ПОГОДА ПО ЧАСАМ</string>
    <string name="weatherTomorrow">ПОГОДА НА ЗАВТРА</string>
    <string name="clear">Сегодня: ясно, без осадков</string>
    <string name="rain">Завтра: ожидается дождь</string>
    <string name="time1">8:00</string>
    <string name="time2">12:00</string>
    <string name="time3">14:00</string>
    <string name="time4">18:00</string>
    <string name="time6">20:00</string>
    <string name="temp1">+16 C</string>
    <string name="temp2">+24 C</string>
    <string name="temp3">+25 C</string>
    <string name="temp4">+23 C</string>
    <string name="temp5">+23 C</string>
    <string name="temp6">+20 С</string>
    <string name="temp7">+25 С</string>
    <string name="wind1">7 м/с</string>
    <string name="wind2">3 м/с</string>
    <string name="searchCity">Поиск</string>
    <string name="searchCheckBox">Где тепло и солнечно</string>
    <string name="searchInput">AutoCompleteTextView</string>
    <string name="selectionCity">Выбор города</string>
    <string name="exit1">TODO</string>
    <string name="inputCity">Введите город</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hourWeatherFrag">Button</string>
    <string name="showHourWeather">показать</string>
    <string name="closeHourWeather">скрыть</string>
    <string name="serverWeatherButt">Погода с сервера</string>
    <string name="термометр">TODO</string>
    <string name="скоростьветра">6</string>
    <string name="температурасегодня">25</string>
    <string name="влажность">20</string>
    <string name="давление">73</string>
    <string name="теплыйгород1">Сочи</string>
    <string name="itemText1">Сочи</string>
    <string name="title_activity_navi">NaviActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="itemText">TextView</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="clear1">Clear1</string>
</resources>